# my_site

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/core/: config.py
frontend/: index.html
frontend/css/: style.css
nginx/: Dockerfile  nginx.conf
tests/: test_main.py
