[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["PARADIGMASPACE <axomjak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"

[tool.poetry.dev-dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
